--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Initial Template",
-  "name": "Initial Template",
+  "short_name": "Adeudados Contable",
+  "name": "Estudio Contable - Adeudados",
   "icons": [
     {
       "src": "favicon.ico",
