--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "axios": "^1.7.7",
+    "firebase": "^10.13.0",
     "formik": "^2.4.6",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
@@ -25,8 +26,8 @@
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.2",
     "simplebar-react": "^3.2.6",
-    "yup": "^1.4.0",
-    "firebase": "^10.13.0"
+    "xlsx": "^0.18.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -43,13 +44,13 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "firebase-tools": "^13.15.4",
     "globals": "^15.11.0",
     "jsdom": "^25.0.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
-    "vitest": "^2.1.1",
-    "firebase-tools": "^13.15.4"
+    "vitest": "^2.1.1"
   },
   "description": "Adeudados Estudio Contable Paula Scerbo",
   "author": "Lautaro Diez"
